--- a/pom.xml
+++ b/pom.xml
@@ -511,8 +511,8 @@
                 <db.script>mysql</db.script>
                 <jpa.database>MYSQL</jpa.database>
                 <jdbc.driverClassName>com.mysql.cj.jdbc.Driver</jdbc.driverClassName>
-                <jdbc.url>jdbc:mysql://devmysql.ck8dmhxpwjcd.ap-south-1.rds.amazonaws.com:3306/petclinic3?useUnicode=true</jdbc.url>
-                <jdbc.username>petclinic3</jdbc.username>
+                <jdbc.url>jdbc:mysql://db-instance-terra.cdcfsyyljvoc.us-east-2.rds.amazonaws.com/petclinic?useUnicode=true</jdbc.url>
+                <jdbc.username>petclinic</jdbc.username>
                 <jdbc.password>9177706784jagannadha</jdbc.password>
             </properties>
             <dependencies>
